# test-automation-fwk-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
ndviet_test_automation/demo/utilities/: files.py  json.py  os_checks.py  yaml.py
ndviet_test_automation/utilities/src/configuration/: abstract_configuration.py  configuration_factory.py  configuration_helpers.py  configuration_manager.py  configuration_ordering.py  constants.py  json_configuration.py  keyword.py  properties_configuration.py  yaml_configuration.py
ndviet_test_automation/utilities/src/dictionary/: dict_utils.py
ndviet_test_automation/utilities/src/file/: file_helpers.py
ndviet_test_automation/utilities/src/template/: template_heplers.py
ndviet_test_automation/utilities/src/test_object/: object_repository.py  test_object.py  web_element_identifier.py  web_test_object.py
ndviet_test_automation/web/src/: take_screenshot.py  waiting.py  web_element_helpers.py  webui.py  webui_abstract.py
ndviet_test_automation/web/src/driver/: browser_factory.py  driver_manager.py  remote_driver_factory.py  target_factory.py
tests/resources/configuration/: seleniumConfiguration.yaml
tests/utilities/configuration/: configuration_ordering_test.py
