[tool.poetry]
name = "ndviet-test-automation"
version = "0.1.0"
description = ""
authors = ["Viet Nguyen Duc <nguyenducviet4496@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^7.0"
robotframework-ride = "^2.0.8.1"
robotframework-seleniumlibrary = "^6.2.0"
robotframework-requests = "^0.9.6"
jsonpath-ng = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
