[tool.poetry]
name = "ndviet-test-automation"
version = "0.1.0"
description = ""
authors = ["Viet Nguyen Duc <nguyenducviet4496@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robotframework-seleniumlibrary = "^6.2.0"
jsonpath-ng = "^1.6.1"
pyyaml = "^6.0.1"
robotframework = "^7.0"
robotframework-tidy = "^4.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
